Correción ortográfica y otros ajustes

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -33,16 +33,16 @@
   </head>
   <body>
     <div class="container">
-      <h1>Bienvenido a URL-Shorten</h1>
-      <h3>Acorta tu urls de manera simple y sencilla</h3>
+      <h1>BIENVENIDO A URL-SHORTEN</h1>
+      <h3>Acorta tus urls de manera simple y sencilla</h3>
       <section class="btn-list">
         <div>
           <p>¿Eres nuevo?</p>
-          <button>Registrarse</button>
+          <button>Regístrate</button>
         </div>
         <div>
           <p>¿Ya tienes una cuenta?</p>
-          <button>Iniciar Sesión</button>
+          <button>Inicia Sesión</button>
         </div>
       </section>
     </div>
