--- a/src/public/index.html
+++ b/src/public/index.html
@@ -38,11 +38,11 @@
       <section class="btn-list">
         <div>
           <p>¿Eres nuevo?</p>
-          <button>Regístrate</button>
+          <button><a href="/register">Regístrate</a></button>
         </div>
         <div>
           <p>¿Ya tienes una cuenta?</p>
-          <button>Inicia Sesión</button>
+          <button><a href="/login">Inicia Sesión</a></button>
         </div>
       </section>
     </div>
